Synchronize native-hello-module demo with the website version [ci skip]