@@ -1,5 +1,16 @@
-# GraalVM Demos: Building a HelloWorld Java Module into a Native Executable
-This repository contains the code for a demo application for [GraalVM](http://graalvm.org).
+# Build Java Module into a Native Executable
+
+GraalVM Native Image supports the Java Platform Module System, introduced in Java 9, which means you can convert a modularized Java application into a native executable.
+
+The native-image tool accepts the module-related arguments like `--module (-m)`, `--module-path (-p)`, `--add-opens`, `--add-exports` (same as for the java launcher). When such a module-related argument is used, the native-image tool itself is used as a module too.
+
+In addition to supporting `--add-reads` and `--add-modules`, all module related options are considered prior to scanning the modulepath. This helps prevent class loading errors and allow for better module introspection at run time.
+
+The command to build a native executable from a Java module is:
+```bush
+native-image [options] --module <module>[/<mainclass>] [options]
+```
+The example below shows how to build a modular Java application into a native executable. 
 
 ## Prerequisites
 * [GraalVM](http://graalvm.org)
@@ -8,47 +19,20 @@ This repository contains the code for a demo application for [GraalVM](http://gr
 
 ## Preparation
 
-1. [Download GraalVM](https://www.graalvm.org/downloads/), unzip the archive, export the GraalVM home directory as the `$GRAALVM_HOME` and add `$GRAALVM_HOME/bin` to the `PATH` environment variable.
+1. Download and install the latest GraalVM JDK with Native Image using [GraalVM JDK Dowloader](https://github.com/graalvm/graalvm-jdk-downloader):
+    ```bash
+    bash <(curl -sL https://get.graalvm.org/jdk)  
+    ```
 
-  On Linux:
-  ```bash
-  export GRAALVM_HOME=/home/${current_user}/path/to/graalvm
-  export PATH=$GRAALVM_HOME/bin:$PATH
-  ```
-  On macOS:
-  ```bash
-  export GRAALVM_HOME=/Users/${current_user}/path/to/graalvm/Contents/Home
-  export PATH=$GRAALVM_HOME/bin:$PATH
-  ```
-  On Windows:
-  ```bash
-  setx /M GRAALVM_HOME "C:\Progra~1\Java\<graalvm>"
-  setx /M PATH "C:\Progra~1\Java\<graalvm>\bin;%PATH%"
-  ```
-
-2. Install [Native Image](https://www.graalvm.org/docs/reference-manual/native-image/#install-native-image) by running:
-  ```bash
-  gu install native-image
-  ```
-For compilation, the `native-image` tool depends on the local toolchain.
-Please make sure that `glibc-devel`, `zlib-devel` (header files for the C library and zlib), and `gcc` are available on your system. Some Linux distributions may additionally require `libstdc++-static`.
-See [Prerequisites for Native Image](https://www.graalvm.org/dev/reference-manual/native-image/#prerequisites).
-
-3. Download or clone the repository and navigate into the `native-hello-module` directory:
-  ```bash
-  git clone https://github.com/graalvm/graalvm-demos
-  cd graalvm-demos/native-hello-module
-  ```
-## Build the Application
-Before running this example, you need to build the application:
-
-```bash
-$ mvn package
-```
-This creates a JAR file with all dependencies embedded: `target/HelloModule-1.0-SNAPSHOT.jar`
+2. Download or clone the repository and navigate into the `native-hello-module` directory:
+    ```bush
+    git clone https://github.com/graalvm/graalvm-demos
+    cd graalvm-demos/native-hello-module
+    ```
 
 ## Run the Application
-The following modularized Java Hello World example
+
+For the demo, you will use a simple _HelloWorld_ Java module gathered with Maven:
 
     ├── hello
     │   └── Main.java
@@ -66,23 +50,34 @@ The following modularized Java Hello World example
         >     exports hello;
         > }
 
-can be executed via Java using the following command:
-    
-    $ java --module-path target/HelloModule-1.0-SNAPSHOT.jar --module HelloModule
+1. Compile and package the project with Maven:
+    ```bash
+    $JAVA_HOME/bin/mvn package
+    ```
+    This creates a JAR file with all dependencies embedded: `target/HelloModule-1.0-SNAPSHOT.jar`
+
+2. Test running it on GraalVM’s JDK:
+    ```bush    
+    $JAVA_HOME/bin/java --module-path target/HelloModule-1.0-SNAPSHOT.jar --module HelloModule
+    ```
+    You should see the next  output:
+    ```
     Hello from Java Module: HelloModule
-    
-With GraalVM you can **now build Java modules** into native executables, using the following syntax:
+    ```
 
-    $ native-image --module-path target/HelloModule-1.0-SNAPSHOT.jar --module HelloModule
-
-    [hellomodule:10847]    classlist:     513.59 ms,  0.96 GB
-    [hellomodule:10847]        (cap):     386.65 ms,  0.96 GB
-    ....
-    [hellomodule:10847]        image:     968.93 ms,  4.85 GB
-    [hellomodule:10847]        write:     201.81 ms,  4.85 GB
-    [hellomodule:10847]      [total]:  19,216.19 ms,  4.85 GB
+3. Build this module into a native executable:
+    ```bush 
+    $JAVA_HOME/bin/native-image --module-path target/HelloModule-1.0-SNAPSHOT.jar --module HelloModule
+    ```
                                       
-It builds the modular Java app into a native executable that can be executed with:
-    
-    $ ./hellomodule 
+    It builds the modular Java application into a native executable called `hellomodule` in the project root directory that you can execute:
+    ```bush
+    ./hellomodule 
+    ```
+    You should see the same output:
+    ```
     Hello from Java Module: HelloModule
+    ```
+### Related Documentation
+
+- Learn more how you can access [resources for a Java module at run time](https://www.graalvm.org/latest/reference-manual/native-image/dynamic-features/Resources/#resources-in-java-modules).
